day-3/exercises/istio/ateam-mp-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: welcome-service
    namespace: default
spec:
    host: welcome-service.default.svc.cluster.local
    subsets:
    - name: v1 
      labels:
        version: v1
