day-3/exercises/istio/ateam-mp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: welcome-service
  namespace: default 
spec:
  gateways:
  - gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: "/greet"
    route:
    - destination:
        host: welcome-service.default.svc.cluster.local
        subset: v1 
        port:
          number: 8080
